--- a/ui/src/app/chat/chat.component.html
+++ b/ui/src/app/chat/chat.component.html
@@ -1,17 +1,22 @@
-<div>
-<h1>Angular2 + Spark Websocket Chat</h1>
-	<h2>Users</h2>
-    <ul>
-        <li *ngFor="#user of userList">
-            {{user}}
-        </li>
-    </ul>
-    <h2>Chat</h2>
-    <ul>
-        <li *ngFor="#message of messages">
-            {{message.message}} - {{message.sender}} - {{message.time}}
-        </li>
-    </ul>
-    <input [(ngModel)]="message " placeholder="Type your message here ... " />
-    <button (click)="sendMessage()">Send</button>
+<div class="row">
+    <div class="col-md-6">
+        <h1>Angular2 + Spark Websocket Threaded Chat</h1>
+        <h2>Users</h2>
+        <ul>
+            <li *ngFor="let user of userList">
+                {{user}}
+            </li>
+        </ul>
+        <h2>Chat</h2>
+        <ul>
+            <li *ngFor="let message of messages">
+                {{message.message}} - {{message.sender}} - {{message.time}}
+            </li>
+        </ul>
+        <input [(ngModel)]="message " placeholder="Type your message here ... " />
+        <button (click)="sendMessage()">Send</button>
+    </div>
+    <div class="col-md-6">
+        <h1>derp</h1>
+    </div>
 </div>
