--- a/ui/src/app/chat/chat.component.html
+++ b/ui/src/app/chat/chat.component.html
@@ -17,6 +17,10 @@
         <button (click)="sendMessage()">Send</button>
     </div>
     <div class="col-md-6">
-        <h1>derp</h1>
+        <h1>Threaded messages</h1>
+        <ul *ngFor="let comment of tempObj">
+            <!-- <app-comment [comment]="comment"></app-comment> -->
+            <app-comment [comment]="comment">loading</app-comment>
+        </ul>
     </div>
 </div>
