Got smart comment scrolling working

--- a/ui/src/app/comment/comment.component.html
+++ b/ui/src/app/comment/comment.component.html
@@ -10,7 +10,7 @@
 <div *ngIf="!collapsed" class="card-block">
 
 	<p class="card-text" 
-		[class.mark]="!highlight">
+		[class.mark]="highlight">
     {{comment.text}}</p>
 	
 	<small>
