Added font awesome CDN

--- a/ui/src/app/comment/comment.component.html
+++ b/ui/src/app/comment/comment.component.html
@@ -15,7 +15,9 @@
 	
 	<small>
 		<ul class="list-inline">
-			<li role="button" class="list-inline-item" (click)="showReply = !showReply">reply</li>
+			<li role="button" class="list-inline-item" (click)="showReply = !showReply">
+				<i class="fa fa-fw fa-reply"></i>
+			</li>
 			<li class="list-inline-item">edit</li>
 		</ul>
 	</small>
