--- a/ui/src/app/comment/comment.component.html
+++ b/ui/src/app/comment/comment.component.html
@@ -9,9 +9,9 @@
 </div>
 <div *ngIf="!collapsed" class="card-block">
 
-	<p class="card-text" 
-		[class.mark]="highlight">
-    {{comment.text}}</p>
+	<div class="card-text" 
+		[class.mark]="highlight" [innerHTML]="comment.text | markdown">
+	</div>
 	
 	<small *ngIf="!showReply">
 		<ul class="list-inline">
