1/3rd done with user system, got websocket part done

--- a/ui/src/app/chat/chat.component.html
+++ b/ui/src/app/chat/chat.component.html
@@ -9,7 +9,7 @@
     <div class="col-md-2">
         <h1>Users</h1>
         <ul>
-            <li *ngFor="let user of users">{{user}}</li>
+            <li *ngFor="let user of users">{{user.name}}</li>
         </ul>
     </div>
 </div>
