--- a/ui/src/app/navbar/navbar.component.html
+++ b/ui/src/app/navbar/navbar.component.html
@@ -3,10 +3,10 @@
     &#9776;
   </button>
   <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-    <a class="navbar-brand" href="#">Flow</a>
+    <a class="navbar-brand" [routerLink]="['Home']">Flow</a>
     <ul class="nav navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Heh <span class="sr-only">(current)</span></a>
+        <a class="nav-link" [routerLink]="['Discussion', {discussionId: 1}]">Heh <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <form class="form-inline">
@@ -23,7 +23,7 @@
       <ul class="dropdown-menu" role="menu" aria-labelledby="simple-btn-keyboard-nav">
         <li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>
         <li class="divider dropdown-divider"></li>
-        <li role="menuitem"><a (click)="userService.logout()" class="dropdown-item" href="#">Logout</a></li>
+        <li role="menuitem"><a (click)="logout()" class="dropdown-item" href="#">Logout</a></li>
       </ul>
     </div>
   </div>
