--- a/ui/src/app/comment/comment.component.html
+++ b/ui/src/app/comment/comment.component.html
@@ -33,6 +33,9 @@
 			<li *ngIf="comment.parentId" role="button" class="list-inline-item">
 				<i [routerLink]="['/Discussion', {discussionId: comment.discussionId}, 'ChatSub', {commentId: comment.parentId}]" class="fa fa-fw fa-level-up"></i>
 			</li>
+			<li *ngIf="!comment.parentId" role="button" class="list-inline-item">
+				<i [routerLink]="['/Discussion', {discussionId: comment.discussionId}]" class="fa fa-fw fa-level-up"></i>
+			</li>
 			<li *ngIf="comment.id != comment.topParentId || comment.parentId == null" role="button" class="list-inline-item">
 				<i [routerLink]="['/Discussion', {discussionId: comment.discussionId}, 'ChatSub', {commentId: comment.id}]" class="fa fa-fw fa-level-down"></i>
 			</li>
