--- a/ui/src/app/comment/comment.component.html
+++ b/ui/src/app/comment/comment.component.html
@@ -4,6 +4,7 @@
 			role="button" 
 			(click)="collapsed = !collapsed">{{collapseText()}}</li>
 		<li class="text-primary list-inline-item">{{comment.userName}}</li>
+		<li *ngIf="comment.avgRank" class="label label-pill label-info">{{comment.avgRank}}</li>
 		<li *ngIf="!comment.modified" class="text-muted list-inline-item"><small>{{comment.created | moment}}</small></li>
 		<li *ngIf="comment.modified" class="text-muted list-inline-item"><small><i>modified {{comment.modified | moment}}</i></small></li>
 	</ul>
@@ -24,6 +25,9 @@
 	
 	<small *ngIf="!showReply && !showEdit">
 		<ul class="list-inline">
+			<li role="button" class="list-inline-item" (click)="toggleShowVoteSlider()">
+				<i class="fa fa-fw fa-thumbs-up"></i>
+			</li>
 			<li role="button" class="list-inline-item" (click)="toggleShowReply()">
 				<i class="fa fa-fw fa-reply"></i>
 			</li>
@@ -41,6 +45,9 @@
 			</li>
 		</ul>
 	</small>
+	<div *ngIf="showVoteSlider">
+		<input [value]="rank" (mouseup)="setRank($event.target.value)" type="range" min="0" max="100" step="1" (value)="rank"/>
+	</div>
 	<fieldset *ngIf="showReply" class="form-group">
     	<app-markdown-edit (textEvent)="setReply($event)"></app-markdown-edit>
     	<br>
