--- a/ui/src/app/comment/comment.component.html
+++ b/ui/src/app/comment/comment.component.html
@@ -4,8 +4,9 @@
 			role="button" 
 			(click)="collapsed = !collapsed">{{collapseText()}}</li>
 		<li class="text-primary list-inline-item">{{comment.userName}}</li>
-		<li *ngIf="comment.avgRank" class="label label-pill label-info">{{comment.avgRank}}</li>
-		<li *ngIf="rank" class="label label-pill label-primary">{{rank}}</li>
+		<li *ngIf="comment.avgRank" class="label label-pill label-default list-inline-item">{{comment.avgRank}}</li>
+		<li *ngIf="rank" class="label label-pill label-info list-inline-item">{{rank}}</li>
+		<li *ngIf="comment.avgRank" class="text-muted list-inline-item"><small>{{comment.numberOfVotes}} votes</small></li>
 		<li *ngIf="!comment.modified" class="text-muted list-inline-item"><small>{{comment.created | moment}}</small></li>
 		<li *ngIf="comment.modified" class="text-muted list-inline-item"><small><i>modified {{comment.modified | moment}}</i></small></li>
 	</ul>
