--- a/ui/src/app/comment/comment.component.html
+++ b/ui/src/app/comment/comment.component.html
@@ -28,7 +28,7 @@
 	<small *ngIf="!showReply && !showEdit">
 		<ul class="list-inline">
 			<li *ngIf="userService.getUser().id != comment.userId" role="button" class="list-inline-item" (click)="toggleShowVoteSlider()">
-				<i class="fa fa-fw fa-thumbs-up"></i>
+				<i class="fa fa-fw fa-star-half-o"></i>
 			</li>
 			<li role="button" class="list-inline-item" (click)="toggleShowReply()">
 				<i class="fa fa-fw fa-reply"></i>
